# History-Resolved-Phase-as-a-State-Variable-in-Adaptive-Complex-Networks

./: .gitignore  README.md  history_resolved_phase_white_paper.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: gpu_benchmark_report.json  hr_phase_gpu_benchmark.py  onset_map_gpu_100x100.csv  onset_map_gpu_20x20.csv  onset_map_gpu_3x3.csv  plot_onset_map.py
src/hrphasenet/: __init__.py  conductance.py  drives.py  entropy.py  graphs.py  network.py  phase.py  solver.py
src/hrphasenet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_conductance.py  test_entropy.py  test_graphs_drives.py  test_network.py  test_phase.py  test_solver.py
